--- a/www/index.html
+++ b/www/index.html
@@ -75,6 +75,15 @@
                           data-show-count="false"
                           data-lang="en">@TheReformAct</a>
                     </p>
+                    <p>
+                        and on Facebook:
+                        <div class="fb-like"
+                            data-href="https://www.facebook.com/TheReformAct"
+                            data-layout="box_count"
+                            data-action="like"
+                            data-show-faces="false"
+                            data-share="false"></div>
+                    </p>
                 </div>
 
                 <div class="col-md-6">
