link to fb page as well as like button

--- a/www/index.html
+++ b/www/index.html
@@ -76,7 +76,7 @@
                           data-lang="en">@TheReformAct</a>
                     </p>
                     <p>
-                        and on Facebook:
+                        <a href="https://www.facebook.com/TheReformAct">and on Facebook</a>:
                         <div class="fb-like"
                             data-href="https://www.facebook.com/TheReformAct"
                             data-layout="box_count"
