restored "who" the website is by

--- a/www/index.html
+++ b/www/index.html
@@ -158,6 +158,11 @@
                 <a href="#">Back to top</a>
                 <br>
                 Contribute to this site <a href="https://github.com/kevinodotnet/reformactwww">on GitHub</a>.
+                <br>
+                <a href="http://twitter.com/odonnell_k">@odonnell_k</a> setup this website, 
+                <a href="https://twitter.com/dpogue">@dpogue</a> has contributed to it. 
+                <br>
+                We hope you will to.
             </p>
         </footer>
 
